--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ email:
 twitter_username:
 github_username: kartiksrinivas007 
 rss: RSS
-
+markdown: kramdown
 ### Build settings
 
 url: https://thatskartik.github.io
